[tool.poetry]
name = "perplexity-clone"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
tinydb = "^4.8.2"
langchain-openai = "^0.3.7"
langgraph = "^0.3.5"
python-dotenv = "^1.0.1"
tavily-python = "^0.5.1"
openperplex = "^0.3.0"
langchain-ollama = "^0.2.3"
streamlit = "^1.43.0"
langchain-core = "^0.3.45"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
